@@ -23,8 +23,10 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.security.GeneralSecurityException;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -151,7 +153,7 @@ public class SpreadsheetFile {
 	 */
 	public static void registerFunction(String name, String functionClassName) throws Exception {
 		try {
-			Object o = Class.forName(functionClassName).newInstance();
+			Object o = Class.forName(functionClassName).getDeclaredConstructor().newInstance();
 			if (o instanceof Function) {
 				Function f = (Function) o;
 				WorkbookEvaluator.registerFunction(name, f);
@@ -190,8 +192,20 @@ public class SpreadsheetFile {
 		}
 	}
 
-	public void setTargetSheetName(String name) throws IOException {
-		this.targetSheetName = ensureCorrectExcelSheetName(name);
+	public void setTargetSheetName(String name) throws Exception {
+		setTargetSheetName(name, false);
+	}
+	
+	public void setTargetSheetName(String name, boolean tolerant) throws Exception {
+		name = ensureCorrectExcelSheetName(name);
+		sheet = findSheet(name, tolerant);
+		if (sheet == null) {
+			// sheet not found, so create it just now
+			this.targetSheetName = name;
+			sheet = workbook.createSheet(name);
+		} else {
+			this.targetSheetName = sheet.getSheetName();
+		}
 	}
 	
 	public void setTargetSheetName(Integer index) throws Exception {
@@ -284,6 +298,9 @@ public class SpreadsheetFile {
 	 * @throws Exception
 	 */
 	public void setInputFile(String inputFileName, boolean dieIfFileNotExists) throws Exception {
+		if (inputFileName == null || inputFileName.trim().isEmpty() || inputFileName.trim().length() < 5) {
+			throw new Exception("Input file name cannot be null or empty and must have at least 5 letters");
+		}
 		SpreadsheetTyp type = getSpreadsheetType(inputFileName);
 		if (currentType != null) {
 			if (currentType != type) {
@@ -358,6 +375,7 @@ public class SpreadsheetFile {
 		}
 	}
 	
+	@SuppressWarnings("resource")
 	public void initializeWorkbook() throws Exception {
 		if (inputFile != null || inputBytes != null) {
 			// open existing files
@@ -705,7 +723,7 @@ public class SpreadsheetFile {
 	
     public static String ensureCorrectExcelSheetName(String desiredName) {
         if (desiredName == null || desiredName.length() == 0) {
-            return "Tabelle";
+            return "Sheet 1";
         } else {
             StringReplacer sr = new StringReplacer(desiredName);
             sr.replace("/", " ");
@@ -951,4 +969,47 @@ public class SpreadsheetFile {
 		}
 	}
 
+	public Row getCurrentRow() {
+		return currentRow;
+	}
+	
+	public List<Sheet> getSheets() {
+		List<Sheet> sheets = new ArrayList<>();
+		int n = workbook.getNumberOfSheets();
+		for (int i = 0; i < n; i++) {
+			sheets.add(workbook.getSheetAt(i));
+		}
+		return sheets;
+	}
+	
+	private String crunchSheetName(String name) {
+		return name.toLowerCase().replace("_", "").replace(" ", "").replace("-", "").trim();
+	}
+	
+	public Sheet findSheet(String expectedSheetName, boolean tolerant) throws Exception {
+		if (workbook == null) {
+			throw new Exception("Workbook is not initialized!");
+		}
+		if (expectedSheetName == null || expectedSheetName.trim().isEmpty()) {
+			throw new Exception("Name of sheet cannot be null or empty!");
+		}
+		Sheet expectedSheet = workbook.getSheet(expectedSheetName);
+		if (expectedSheet == null && tolerant) {
+			List<Sheet> sheets = getSheets();
+			String crunchedExpectedSheetName = crunchSheetName(expectedSheetName);
+			for (Sheet sheetInList : sheets) {
+				String name = sheetInList.getSheetName();
+				if (name != null) {
+					String crunchedSheetNameInList = crunchSheetName(name);
+					if (crunchedSheetNameInList.equals(crunchedExpectedSheetName)) {
+						targetSheetName = expectedSheetName;
+						expectedSheet = sheetInList;
+						System.out.println("Found with tolerance the actual existing sheet: " + sheetInList.getSheetName() + ". Given expected sheet name was: " + expectedSheetName);
+					}
+				}
+			}
+		}
+		return expectedSheet;
+	}
+	
 }
